# C_Piscine_Rush_00

./: CMakeLists.txt
ex00/: a.out  main.c  main_arg.c  main_test.c  rush00.c  rush01.c  rush02.c  rush03.c  rush04.c
